--- a/pipeline/Makefile
+++ b/pipeline/Makefile
@@ -4,50 +4,35 @@
 
 PROJECT      := pipeline
 VENV_DIR     := .venv
-CLEAN_TARGETS := build debug **/*pycache__* *.pyc *.pyo *.log outputs reports/*/*
-
-# Virtual environment paths and commands
-ifeq ($(OS),Windows_NT)
-    VENV_PYTHON  := $(VENV_DIR)\Scripts\python.exe
-    RM_VENV      := rmdir /s /q $(VENV_DIR)
-else
-    VENV_PYTHON  := $(VENV_DIR)/bin/python
-    RM_VENV      := rm -rf $(VENV_DIR)
-endif
+VENV_PYTHON  := $(VENV_DIR)/bin/python
 
 ################################################################################
 # PHONY TARGETS                                                                #
 ################################################################################
 
-.PHONY: all clean run help
+.PHONY: all run help
 
 ################################################################################
 # DEFAULT TARGET                                                               #
 ################################################################################
 
-.DEFAULT_GOAL := help  # Default target is 'help'
+.DEFAULT_GOAL := run
 
 ################################################################################
 # COMMANDS                                                                     #
 ################################################################################
 
-## all: Default target - display help
-all: help
+all: run
 
-## clean: Remove the virtual environment, build artifacts, and temporary files
-clean:
-	@echo "Cleaning up..."
-	$(RM_VENV)
-	@echo "Cleaning build artifacts, temporary files, and reports..."
-	@find . -type d \( -name "build" -o -name "debug" -o -name "__pycache__" -o -name "outputs" -o -name "reports" \) -exec rm -rf {} +
-	@find . -type f \( -name "*.pyc" -o -name "*.pyo" -o -name "*.log" \) -delete
-	@echo "Cleanup complete."
-
-## run: Run the entire DVC pipeline
+## run: Setup virtual environment and run the pipeline
 run:
-	@echo "Running the DVC pipeline..."
+	@echo "Setting up virtual environment..."
+	python3 -m venv $(VENV_DIR)
+	$(VENV_PYTHON) -m pip install --upgrade pip
+	$(VENV_PYTHON) -m pip install dvc
+	@echo "Running pipeline..."
 	@cd $(PROJECT) && $(VENV_PYTHON) -m dvc repro -f
-	@echo "DVC pipeline complete."
+	@echo "Pipeline complete."
 
 ################################################################################
 # Help                                                                         #
@@ -56,6 +41,5 @@ run:
 ## help: Display available Make commands
 help:
 	@echo "Available targets:"
-	@echo "  clean       - Remove virtual environment, build artifacts, and temporary files."
-	@echo "  run         - Run the entire DVC pipeline."
+	@echo "  run         - Setup virtual environment and run the DVC pipeline (default)."
 	@echo "  help        - Displays this help message."
