--- a/pipeline/requirements-autogluon.txt
+++ b/pipeline/requirements-autogluon.txt
@@ -1,11 +1,12 @@
+autogluon
 dvc[all]
 dvclive
-pandas
-numpy
-scikit-learn
-autogluon
-optuna
-matplotlib
-seaborn
 graphviz
 joblib
+matplotlib
+numpy
+optuna
+pandas
+pygraphviz
+scikit-learn
+seaborn
