--- a/pipeline/dvc.yaml
+++ b/pipeline/dvc.yaml
@@ -1,13 +1,7 @@
 stages:
   setup:
     cmd:
-      - pip install -r requirements.txt
-      - pip freeze > requirements-frozen.txt
-    deps:
-      - requirements.txt
-    outs:
-      - requirements-frozen.txt:
-          persist: false
+      - pip install uv virtualenv
 
   infrastruct:
     cmd:
@@ -213,7 +207,7 @@ stages:
 
   train_autogluon:
     cmd:
-      - sudo apt install --yes --no-install-recommends $(cat packages-autogluon.txt)
+      - sudo apt-get install --yes --no-install-recommends $(cat packages-autogluon.txt)
       - uv venv .venv-autogluon --python 3.10
       - . .venv-autogluon/bin/activate && uv pip install -r requirements-autogluon.txt
       - . .venv-autogluon/bin/activate && uv pip freeze > requirements-autogluon-frozen.txt
