--- a/pipeline/models/neural_network/artifacts/metrics/params.yaml
+++ b/pipeline/models/neural_network/artifacts/metrics/params.yaml
@@ -1,4 +1,4 @@
-data_hash: '2780051e714710100282977488932568'
+data_hash: f6a67e2d2bfcbb6d3ce0026abf45034c
 n_samples: 100121
 n_features: 95
 class_distribution_before_smote:
