--- a/pipeline/models/logistic_regression/artifacts/metrics/params.yaml
+++ b/pipeline/models/logistic_regression/artifacts/metrics/params.yaml
@@ -1,4 +1,4 @@
-data_hash: '2780051e714710100282977488932568'
+data_hash: f6a67e2d2bfcbb6d3ce0026abf45034c
 n_samples: 100121
 n_features: 95
 class_distribution_before_smote:
@@ -13,6 +13,3 @@ train_size: 60072
 val_size: 20024
 test_size: 20025
 train_size_after_smote: 106514
-best_C: '1.0'
-best_penalty: l2
-best_solver: saga
