--- a/pipeline/dvc.yaml
+++ b/pipeline/dvc.yaml
@@ -1,105 +1,139 @@
 stages:
   setup:
     cmd:
+      - mkdir -p .markers
+      - rm -f .markers/setup.done
       - pip install uv virtualenv
+      - touch .markers/setup.done
+    outs:
+      - .markers/setup.done
 
   infrastruct:
     cmd:
+      - rm -f .markers/infrastruct.done
       - uv venv .venv-infrastruct --python 3.10
       - . .venv-infrastruct/bin/activate && uv pip install -r requirements-infrastruct.txt
       - . .venv-infrastruct/bin/activate && uv pip freeze > requirements-infrastruct-frozen.txt
       - . .venv-infrastruct/bin/activate && python src/infrastruct.py
+      - touch .markers/infrastruct.done
     deps:
       - src/infrastruct.py
       - requirements-infrastruct.txt
-      - :setup
+      - .markers/setup.done
+    outs:
+      - .markers/infrastruct.done
 
   ingest:
     cmd:
+      - rm -f .markers/ingest.done
       - uv venv .venv-ingest --python 3.10
       - . .venv-ingest/bin/activate && uv pip install -r requirements-ingest.txt
       - . .venv-ingest/bin/activate && uv pip freeze > requirements-ingest-frozen.txt
       - . .venv-ingest/bin/activate && python src/ingest.py
+      - touch .markers/ingest.done
     deps:
       - src/ingest.py
       - requirements-ingest.txt
-      - :infrastruct
+      - .markers/infrastruct.done
+    outs:
+      - .markers/ingest.done
 
   preprocess:
     cmd:
+      - rm -f .markers/preprocess.done
       - uv venv .venv-preprocess --python 3.10
       - . .venv-preprocess/bin/activate && uv pip install -r requirements-preprocess.txt
       - . .venv-preprocess/bin/activate && uv pip freeze > requirements-preprocess-frozen.txt
       - . .venv-preprocess/bin/activate && python src/preprocess.py
+      - touch .markers/preprocess.done
     deps:
       - src/preprocess.py
       - requirements-preprocess.txt
       - data/raw/data.csv
-      - :ingest
+      - .markers/ingest.done
+    outs:
+      - .markers/preprocess.done
 
   explore:
     cmd:
+      - rm -f .markers/explore.done
       - uv venv .venv-explore --python 3.10
       - . .venv-explore/bin/activate && uv pip install -r requirements-explore.txt
       - . .venv-explore/bin/activate && uv pip freeze > requirements-explore-frozen.txt
       - . .venv-explore/bin/activate && python src/explore.py
+      - touch .markers/explore.done
     deps:
       - src/explore.py
       - requirements-explore.txt
       - data/raw/data.csv
       - data/interim/data_cleaned.parquet
-      - :preprocess
+      - .markers/preprocess.done
+    outs:
+      - .markers/explore.done
 
   featurize:
     cmd:
+      - rm -f .markers/featurize.done
       - uv venv .venv-featurize --python 3.11
       - . .venv-featurize/bin/activate && uv pip install -r requirements-featurize.txt
       - . .venv-featurize/bin/activate && uv pip freeze > requirements-featurize-frozen.txt
       - . .venv-featurize/bin/activate && PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python python src/featurize.py
+      - touch .markers/featurize.done
     deps:
       - src/featurize.py
       - requirements-featurize.txt
       - data/interim/data_cleaned.parquet
       - feature_store.yaml
-      - :explore
+      - .markers/explore.done
+    outs:
+      - .markers/featurize.done
 
   train_logisticregression:
     cmd:
+      - rm -f .markers/train_logisticregression.done
       - uv venv .venv-logisticregression --python 3.10
       - . .venv-logisticregression/bin/activate && uv pip install -r requirements-logisticregression.txt
       - . .venv-logisticregression/bin/activate && uv pip freeze > requirements-logisticregression-frozen.txt
       - . .venv-logisticregression/bin/activate && python models/logistic_regression/model.py
+      - touch .markers/train_logisticregression.done
     deps:
       - models/logistic_regression/model.py
       - requirements-logisticregression.txt
       - data/interim/data_featured.parquet
-      - :featurize
+      - .markers/featurize.done
+    outs:
+      - .markers/train_logisticregression.done
 
   train_neuralnetwork:
     cmd:
+      - rm -f .markers/train_neuralnetwork.done
       - uv venv .venv-neuralnetwork --python 3.10
       - . .venv-neuralnetwork/bin/activate && uv pip install -r requirements-neuralnetwork.txt
       - . .venv-neuralnetwork/bin/activate && uv pip freeze > requirements-neuralnetwork-frozen.txt
       - . .venv-neuralnetwork/bin/activate && PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python python models/neural_network/model.py
+      - touch .markers/train_neuralnetwork.done
     deps:
       - models/neural_network/model.py
       - requirements-neuralnetwork.txt
       - data/interim/data_featured.parquet
-      - :featurize
+      - .markers/featurize.done
+    outs:
+      - .markers/train_neuralnetwork.done
 
   train_autogluon:
     cmd:
+      - rm -f .markers/train_autogluon.done
       - sudo apt-get install --yes --no-install-recommends $(cat packages-autogluon.txt)
       - uv venv .venv-autogluon --python 3.10
       - . .venv-autogluon/bin/activate && uv pip install -r requirements-autogluon.txt
       - . .venv-autogluon/bin/activate && uv pip freeze > requirements-autogluon-frozen.txt
       - . .venv-autogluon/bin/activate && python src/utils.py patch_nvidia_gpu
       - . .venv-autogluon/bin/activate && PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python python models/autogluon/model.py
+      - touch .markers/train_autogluon.done
     deps:
       - models/autogluon/model.py
       - requirements-autogluon.txt
       - data/interim/data_featured.parquet
-      - :featurize
 
 artifacts:
   diabetes-dataset:
