--- a/pipeline/dvc.yaml
+++ b/pipeline/dvc.yaml
@@ -2,6 +2,17 @@ stages:
   setup:
     cmd:
       - pip install uv virtualenv
+      - dvc dag --md >> dag.md
+      - rm -rf .markers
+      - mkdir .markers
+      - echo "done" > .markers/setup.done
+    outs:
+      - dag.md:
+          cache: true
+          persist: true
+      - .markers/setup.done:
+          cache: false
+          persist: false
 
   infrastruct:
     cmd:
@@ -9,7 +20,9 @@ stages:
       - . .venv-infrastruct/bin/activate && uv pip install -r requirements-infrastruct.txt
       - . .venv-infrastruct/bin/activate && uv pip freeze > requirements-infrastruct-frozen.txt
       - . .venv-infrastruct/bin/activate && python src/infrastruct.py
+      - echo "done" > .markers/infrastruct.done
     deps:
+      - .markers/setup.done
       - src/infrastruct.py
       - requirements-infrastruct.txt
     outs:
@@ -18,6 +31,9 @@ stages:
       - .venv-infrastruct:
           cache: true
           persist: false
+      - .markers/infrastruct.done:
+          cache: false
+          persist: false
 
   ingest:
     cmd:
@@ -25,8 +41,9 @@ stages:
       - . .venv-ingest/bin/activate && uv pip install -r requirements-ingest.txt
       - . .venv-ingest/bin/activate && uv pip freeze > requirements-ingest-frozen.txt
       - . .venv-ingest/bin/activate && python src/ingest.py
+      - echo "done" > .markers/ingest.done
     deps:
-      - requirements-infrastruct-frozen.txt
+      - .markers/infrastruct.done
       - src/ingest.py
       - requirements-ingest.txt
     outs:
@@ -47,6 +64,9 @@ stages:
       - .venv-ingest:
           cache: true
           persist: false
+      - .markers/ingest.done:
+          cache: false
+          persist: false
 
   preprocess:
     cmd:
@@ -54,8 +74,9 @@ stages:
       - . .venv-preprocess/bin/activate && uv pip install -r requirements-preprocess.txt
       - . .venv-preprocess/bin/activate && uv pip freeze > requirements-preprocess-frozen.txt
       - . .venv-preprocess/bin/activate && python src/preprocess.py
+      - echo "done" > .markers/preprocess.done
     deps:
-      - requirements-ingest-frozen.txt
+      - .markers/ingest.done
       - src/preprocess.py
       - requirements-preprocess.txt
       - data/raw/data.csv
@@ -71,6 +92,9 @@ stages:
       - .venv-preprocess:
           cache: true
           persist: false
+      - .markers/preprocess.done:
+          cache: false
+          persist: false
 
   explore:
     cmd:
@@ -78,8 +102,9 @@ stages:
       - . .venv-explore/bin/activate && uv pip install -r requirements-explore.txt
       - . .venv-explore/bin/activate && uv pip freeze > requirements-explore-frozen.txt
       - . .venv-explore/bin/activate && python src/explore.py
+      - echo "done" > .markers/explore.done
     deps:
-      - requirements-preprocess-frozen.txt
+      - .markers/preprocess.done
       - src/explore.py
       - requirements-explore.txt
       - data/raw/data.csv
@@ -120,6 +145,9 @@ stages:
       - .venv-explore:
           cache: true
           persist: false
+      - .markers/explore.done:
+          cache: false
+          persist: false
 
   featurize:
     cmd:
@@ -127,8 +155,9 @@ stages:
       - . .venv-featurize/bin/activate && uv pip install -r requirements-featurize.txt
       - . .venv-featurize/bin/activate && uv pip freeze > requirements-featurize-frozen.txt
       - . .venv-featurize/bin/activate && PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python python src/featurize.py
+      - echo "done" > .markers/featurize.done
     deps:
-      - requirements-explore-frozen.txt
+      - .markers/explore.done
       - src/featurize.py
       - requirements-featurize.txt
       - data/interim/data_cleaned.parquet
@@ -142,6 +171,9 @@ stages:
       - .venv-featurize:
           cache: true
           persist: false
+      - .markers/featurize.done:
+          cache: false
+          persist: false
 
   train_logisticregression:
     cmd:
@@ -149,8 +181,9 @@ stages:
       - . .venv-logisticregression/bin/activate && uv pip install -r requirements-logisticregression.txt
       - . .venv-logisticregression/bin/activate && uv pip freeze > requirements-logisticregression-frozen.txt
       - . .venv-logisticregression/bin/activate && python models/logistic_regression/model.py
+      - echo "done" > .markers/train_logisticregression.done
     deps:
-      - requirements-explore-frozen.txt
+      - .markers/featurize.done
       - models/logistic_regression/model.py
       - requirements-logisticregression.txt
       - data/interim/data_featured.parquet
@@ -162,6 +195,9 @@ stages:
           persist: true
       - .venv-logisticregression:
           cache: true
+          persist: false
+      - .markers/train_logisticregression.done:
+          cache: false
           persist: false
     metrics:
       - models/logistic_regression/artifacts/metrics/metrics.json:
@@ -175,15 +211,15 @@ stages:
           cache: true
           persist: true
 
-
   train_neuralnetwork:
     cmd:
       - uv venv .venv-neuralnetwork --python 3.10
       - . .venv-neuralnetwork/bin/activate && uv pip install -r requirements-neuralnetwork.txt
       - . .venv-neuralnetwork/bin/activate && uv pip freeze > requirements-neuralnetwork-frozen.txt
       - . .venv-neuralnetwork/bin/activate && PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python python models/neural_network/model.py
+      - echo "done" > .markers/train_neuralnetwork.done
     deps:
-      - requirements-logisticregression-frozen.txt
+      - .markers/train_logisticregression.done
       - models/neural_network/model.py
       - requirements-neuralnetwork.txt
       - data/interim/data_featured.parquet
@@ -195,6 +231,9 @@ stages:
           persist: true
       - .venv-neuralnetwork:
           cache: true
+          persist: false
+      - .markers/train_neuralnetwork.done:
+          cache: false
           persist: false
     metrics:
       - models/neural_network/artifacts/metrics/metrics.json:
@@ -213,14 +252,14 @@ stages:
 
   train_autogluon:
     cmd:
-      - sudo apt-get install --yes --no-install-recommends $(cat packages-autogluon.txt)
       - uv venv .venv-autogluon --python 3.10
       - . .venv-autogluon/bin/activate && uv pip install -r requirements-autogluon.txt
       - . .venv-autogluon/bin/activate && uv pip freeze > requirements-autogluon-frozen.txt
       - . .venv-autogluon/bin/activate && python src/utils.py patch_nvidia_gpu
       - . .venv-autogluon/bin/activate && PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python python models/autogluon/model.py
+      - echo "done" > .markers/train_autogluon.done
     deps:
-      - requirements-neuralnetwork-frozen.txt
+      - .markers/train_neuralnetwork.done
       - models/autogluon/model.py
       - requirements-autogluon.txt
       - data/interim/data_featured.parquet
@@ -230,9 +269,17 @@ stages:
       - models/autogluon/artifacts/model:
           cache: true
           persist: true
+      - .venv-autogluon:
+          cache: true
+          persist: false
+      - .markers/train_autogluon.done:
+          cache: false
+          persist: false
+    metrics:
       - models/autogluon/artifacts/metrics/metrics.json:
           cache: true
           persist: true
+    plots:
       - models/autogluon/artifacts/plots/confusion_matrix.png:
           cache: true
           persist: true
@@ -242,9 +289,7 @@ stages:
       - models/autogluon/artifacts/plots/roc_curve.png:
           cache: true
           persist: true
-      - .venv-autogluon:
-          cache: true
-          persist: false
+
 
 artifacts:
   diabetes-dataset:
