--- a/.github/workflows/generate-video.yml
+++ b/.github/workflows/generate-video.yml
@@ -145,8 +145,7 @@ jobs:
             git stash pop
             git add \
               Final_Project_Team_3_Deliverable_2.mp4 \
-              pptx2video/video-assets/Final_Project_Team_3_Deliverable_2.pdf \
-              pptx2video/video-assets/conversion_state.json
+              pptx2video/video-assets
             git commit -m "$DURATION out of 10 minutes"
             git push origin main || {
               echo "Push failed. Creating a pull request..."
