--- a/.github/workflows/mlops-pipeline.yml
+++ b/.github/workflows/mlops-pipeline.yml
@@ -66,7 +66,7 @@ jobs:
           MODE: full
           TABLE_NAME: ${{ secrets.TABLE_NAME }}
         run: |
-          dvc repro --force
+          dvc exp run --force
 
       - name: Push to DVC Remotes
         if: always()
